--- a/NeoMix/NeoMix/Web.config
+++ b/NeoMix/NeoMix/Web.config
@@ -12,7 +12,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <connectionStrings>
-    <add name="ConnUolProducao" connectionString="Server=198.71.227.91;Database=neomix;Uid=neomix;Pwd=@RTh4r9301; pooling=false;"/>
+    <add name="ConnUolProducao" connectionString="Server=198.71.227.91;Database=neomix;Uid=neomix;Pwd=123; pooling=false;"/>
   </connectionStrings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
